flux/infrastructure/identity/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: identity
  labels:
    app.kubernetes.io/name: identity
    app.kubernetes.io/part-of: beck-cloud
    app.kubernetes.io/managed-by: flux
